Changes for 1.6.1
* Adding methods to ensure that any power sharing technology (like British to UK Pacific) will still roll for war bonds even if its capital is taken, so long as the shared power is not able to have the warbonds technologies. (veqryn)

* Allowing additional nations to share the cost of technology, and creating a good user interface that dynamically adjusts to show how much is being paid by each nation. (veqryn)

* Created an option in Play-By-Forum and Play-By-Email to send the move summary after the combat move phase, in addition to the summary at the end of the turn. This is to help with OOL and scrambling orders. (veqryn)

* Abstracted EndTurnPanel into AbstractForumPosterPanel, then created MoveForumPosterPanel. (veqryn)

* Created new game option, "Remove All Tech Tokens At End Of Turn", which will remove tech tokens after each tech roll. (veqryn)

* Changing how Battle Records get added and removed from game data through the Change Factory to be more memory efficient. (veqryn)

* Adding an option for "None" to the list of territory effects. (veqryn)

* Added List to Battle Calc so that you can manually select one or more territory effects, hold down shift to select more than one. List will automatically fill with starting territory's effects. (veqryn)

* Fixed battle calc to make it try to use the territory that we select. (veqryn)

* Fixing bug in Battle Calculator where damaged units got turned into healthy units before each battle was calculated. (veqryn)

* Fixed null pointer error in triggerSupportChange caused by having a hashmap of an attachment class, inside of another attachment class, then deserializing this (loading a savegame), resulting in the hashmap being resolved before all its keys are, giving the wrong hashcodes to those keys. (veqryn)

* Updating java Substance to 7.1, and adding 14 more skins. (veqryn)

* Updated embedded Java JRE for windows executable version to Java 6 update 33. (veqryn)
