@@ -1,4 +1,8 @@
 Changes for 1.6.1
+* Created edit option to remove technology from a player, except that shipyards and industrial technology can never be removed, and any technology that uses triggers is pointless to remove and removing will not undo their effect. (veqryn)
+
+* Created edit option to add technology to a player. (veqryn)
+
 * Adding methods to ensure that any power sharing technology (like British to UK Pacific) will still roll for war bonds even if its capital is taken, so long as the shared power is not able to have the warbonds technologies. (veqryn)
 
 * Allowing additional nations to share the cost of technology, and creating a good user interface that dynamically adjusts to show how much is being paid by each nation. (veqryn)
